header_media position on mobile fixed

--- a/client/layouts/media_layouts/header_media/header_media.less
+++ b/client/layouts/media_layouts/header_media/header_media.less
@@ -1,7 +1,10 @@
 nav{
     background-color: #37474f !important;
-    margin-left: 100px !important;
     width: 1270px !important;
+
+    @media screen and (min-width: 992px) {
+       margin-left: 100px !important;
+    }
 }
 
 .nav-wrapper {
